fix(height): fix not visible footer on mobile browser (#12)
* fix(height): fix not visible footer on mobile browser

* style(card): add scale delay

--- a/src/components/App/View.module.scss
+++ b/src/components/App/View.module.scss
@@ -30,10 +30,6 @@
   overflow-y: auto;
   height: 100vh;
   scroll-snap-type: y mandatory;
-  scroll-snap-stop: always;
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 .backgroundGroup {
